[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ui/SkillSelectButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ui/SkillList.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 3.0
bg_color = Color( 1, 1, 1, 1 )

[node name="SkillList" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_right = 256.0
margin_bottom = 7.0
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cracking"
__meta__ = {
"_editor_description_": ""
}

[node name="SkillContainer" type="VBoxContainer" parent="."]
margin_top = 11.0
margin_right = 256.0
margin_bottom = 18.0
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillSelectButton" parent="SkillContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 256.0
